--- a/index.html
+++ b/index.html
@@ -175,15 +175,16 @@
     </main>
 
     <!-- Application Logic (Loaded Sequentially) -->
-    <script src="js/db.js"></script>
-    <script src="js/views/dashboard.js"></script>
-    <script src="js/views/students.js"></script>
-    <script src="js/views/payments.js"></script>
-    <script src="js/views/exams.js"></script>
-    <script src="js/views/logistics.js"></script>
-    <script src="js/views/labels.js"></script>
-    <script src="js/views/resources.js"></script>
-    <script src="js/app.js"></script>
+    <!-- Application Logic (Loaded Sequentially) -->
+    <script src="js/db.js?v=7.0"></script>
+    <script src="js/views/dashboard.js?v=7.0"></script>
+    <script src="js/views/students.js?v=7.0"></script>
+    <script src="js/views/payments.js?v=7.0"></script>
+    <script src="js/views/exams.js?v=7.0"></script>
+    <script src="js/views/logistics.js?v=7.0"></script>
+    <script src="js/views/labels.js?v=7.0"></script>
+    <script src="js/views/resources.js?v=7.0"></script>
+    <script src="js/app.js?v=7.0"></script>
 </body>
 
 </html>
