--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
     <!-- Sidebar -->
     <aside class="w-64 bg-white border-r border-gray-200 flex flex-col transition-all duration-300 z-20 hidden md:flex"
         id="sidebar">
-        <div class="p-6 flex flex-col items-center border-b border-gray-100">
+        <div class="p-6 flex flex-col items-center border-b border-gray-100 cursor-pointer hover:bg-gray-50 transition-colors"
+            onclick="window.navigateTo('dashboard')">
             <div class="w-16 h-16 bg-white rounded-2xl flex items-center justify-center p-2 mb-3">
                 <span class="text-brand-500 text-4xl font-bold">α</span>
             </div>
@@ -126,7 +127,7 @@
         </nav>
 
         <div class="p-4 border-t border-gray-100">
-            <a href="#"
+            <a href="#" id="logout-btn"
                 class="flex items-center gap-3 px-4 py-3 rounded-lg text-sm font-medium text-gray-600 hover:bg-red-50 hover:text-red-600 transition-colors">
                 <i class="fa-solid fa-arrow-right-from-bracket w-5"></i> Logout
             </a>
